[gd_scene load_steps=10 format=3 uid="uid://cqrjc10dx4c50"]

[ext_resource type="Script" path="res://Interface/component/agent_info_panel.gd" id="1_ya5dh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k7acg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_le3sg"]
bg_color = Color(1, 0.0941176, 0.0666667, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8bkm7"]
bg_color = Color(0.482353, 0.117647, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8iif0"]
bg_color = Color(0.894118, 0.470588, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ex5en"]
bg_color = Color(0.0784314, 0.0784314, 0.0784314, 0.584314)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j5yak"]
bg_color = Color(0, 0.666667, 0.8, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ow08t"]
bg_color = Color(0.215686, 0.0705882, 0.839216, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rc6gx"]

[node name="AgentInfoPanel" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ya5dh")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
offset_right = 150.0
offset_bottom = 185.0
theme_override_styles/panel = SubResource("StyleBoxFlat_k7acg")

[node name="HelthBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 155.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = 32.0
grow_horizontal = 2
theme_override_styles/background = SubResource("StyleBoxFlat_le3sg")
theme_override_styles/fill = SubResource("StyleBoxFlat_8bkm7")
value = 50.0
show_percentage = false

[node name="HeatBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 155.0
offset_top = 40.0
offset_right = -5.0
offset_bottom = 67.0
grow_horizontal = 2
theme_override_styles/background = SubResource("StyleBoxFlat_8iif0")
theme_override_styles/fill = SubResource("StyleBoxFlat_ex5en")
value = 50.0

[node name="MoraleBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 155.0
offset_top = 75.0
offset_right = -5.0
offset_bottom = 102.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_j5yak")
theme_override_styles/fill = SubResource("StyleBoxFlat_ow08t")
value = 50.0

[node name="JobProgressBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 155.0
offset_top = 110.0
offset_right = -5.0
offset_bottom = 137.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_rc6gx")
value = 50.0

[node name="HelthLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 155.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = 32.0
grow_horizontal = 2
text = "1/1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 155.0
offset_top = 145.0
offset_right = -5.0
offset_bottom = 185.0
grow_horizontal = 2
alignment = 1

[node name="SpeedLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Speed"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PowerLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Power"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InfluanceLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Influance"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MentalLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Mental"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AetherLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Aether"
horizontal_alignment = 1
vertical_alignment = 1
